<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/YP_Blue"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/YP_White"
        android:textSize="@dimen/header_text_size"
        android:fontFamily="@font/yandex_sans_display_bold"
        android:letterSpacing="0"
        android:paddingBottom="28dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            style="@style/text_of_menu_item"
            android:text="@string/search"
            app:icon="@drawable/ic_search_24x24"
            android:id="@+id/search_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/text_of_menu_item"
            android:text="@string/media_library"
            app:icon="@drawable/ic_media_library_24x24"
            android:id="@+id/media_button"/>

        <com.google.android.material.button.MaterialButton
            style="@style/text_of_menu_item"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings_24x24"
            android:id="@+id/settings_button"/>

    </LinearLayout>

</LinearLayout>