<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/background_color_of_other_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="4dp"
            android:id="@+id/back_button"
            android:src="@drawable/ic_arrow_back_24x24"
            style="@style/back_button"/>

        <TextView
            android:text="@string/settings"
            style="@style/header_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_list_item_layout_height"
        android:orientation="horizontal">

        <TextView
            style="@style/text_of_item_settings_screen"
            android:text="@string/theme"
            android:id="@+id/dark_mode_button" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            app:thumbTintMode="src_atop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_list_item_layout_height"
        android:orientation="horizontal">

        <TextView
            style="@style/text_of_item_settings_screen"
            android:text="@string/share"
            android:id="@+id/share_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_share_24x24"
            style="@style/icon_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_list_item_layout_height"
        android:orientation="horizontal">

        <TextView
            style="@style/text_of_item_settings_screen"
            android:text="@string/support"
            android:id="@+id/support_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_support_24x24"
            style="@style/icon_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_list_item_layout_height"
        android:orientation="horizontal">

        <TextView
            style="@style/text_of_item_settings_screen"
            android:text="@string/user_agreement"
            android:id="@+id/terms_of_use_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_forward_24x24"
            style="@style/icon_color"/>

    </LinearLayout>

</LinearLayout>